[tool.poetry]
name = "raspberry_car"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["Skyler Kaufman <skylerkaufman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.2"
gps3 = "0.33.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
